--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -209,6 +209,7 @@ CanvasDrawer.prototype = {
         var font = data.data.font;
         var pen = data.data.pen;
         var transform = data.data.transform;
+        this.ctx.setTransform(transform[0][0], transform[0][1], transform[1][0], transform[1][1], transform[2][0], transform[2][1]);
         if (pen) this.setupPen(pen);
         if (brush) this.setupBrush(brush);
     },
