--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -93,7 +93,7 @@ QtLogic.prototype = {
                 this.addChildCommand(data);
                 break;
             case "resize":
-                this.resizeCommand(data);
+                //this.resizeCommand(data);
                 break;
         }
     },
@@ -334,7 +334,7 @@ CanvasDrawer.prototype = {
                 break;
             case 15: // Qt::LinearGradientPattern
                 var gradient = brush.gradient;
-                   //ctx.fillStyle = CanvasHelper.createGradient(ctx, gradient,15);
+                ctx.fillStyle = CanvasHelper.createGradient(ctx, gradient,15);
                 break;
             default:
                 console.log('Unknown style: ' + brush.style);
@@ -346,7 +346,7 @@ CanvasDrawer.prototype = {
         ctx.strokeStyle = pen.color;
         }
         if(pen.brush) {
-           //ctx.strokeStyle = CanvasHelper.createGradient(ctx, pen.brush.gradient, pen.brush.style);
+           ctx.strokeStyle = CanvasHelper.createGradient(ctx, pen.brush.gradient, pen.brush.style);
 
         }
         ctx.lineWidth = pen.width;
